# graph-rag-bridgerton-demo

./: .gitignore  README.md  main.py  pyproject.toml
data/: documents.txt  graph.json
graph_rag/: graph_rag.py
traditional_rag/: rag.py  requirements.txt
