[project]
name = "graph-rag-bridgerton-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.13.2",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "sentence-transformers>=5.2.2",
]
